# kappes-space

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: backend-cicd.yml  docker-publish.yml  svelte-cicd.yml
blog-api/: Cargo.toml  Dockerfile  dev.sh
blog-api/migrations/2022-09-06-153933_blog_install/: up.sql
blog-api/src/: auth.rs  config.rs  main.rs  model.rs  schema.rs
blog-api/src/database/: postgres.rs
blog-api/src/models/: post.rs  user.rs
blog-api/src/routes/: auth.rs  index.rs  mod.rs  posts.rs  settings.rs
docker/: nginx.conf
src/: app.css  app.html
src/lib/: Card.svelte  Footer.svelte  Header.svelte  Image.svelte
src/lib/types/: post.d.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte  __layout.svelte  imprint.svelte  index.svelte  projects.svelte
src/routes/blog/: index.svelte  posts.json.ts
src/routes/imprint/: +page.svelte
src/routes/sitemap.xml/: +server.ts
static/: particles.json  robots.txt
