[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["r2d2", "postgres"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0"
tokio = { version = "1.21.0", features = ["macros"]}
actix-service = "2"
actix-web = "4"
dotenv = "0.15.0"
